--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url('fonts.css');
 
 $colors: (
     dark-text: #212529,
@@ -51,29 +52,57 @@ $ipad: 768px;
 }
 
 * {
-    font-family: "Poppins", sans-serif;
+    font-family: "Bahnschrift Regular", sans-serif;
 }
-h1,h3, h4, h6 {
+h1,h3,h4,h5,h6 {
     font-weight: 600;
 }
-body {
+html, body {
     width: 100%;
     height: 100vh;
+    scroll-behavior: smooth;
+}
+.go-to-top{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    transition: .5s;
+    opacity: 0;
+    z-index: 1000;
 }
 main{
-    padding-top: 54px;
+    padding-top: 58px;
 }
 section {
     margin-bottom: 50px;
 }
-nav ul li a{
-    @media (min-width: 768px) and (max-width: 800px) { font-size: 14px;}
+nav ul li a, .form-control{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+}
+.text-title{
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1.3px;
+}
+.blue-line{
+    background: color(primary);
+    opacity: 0.9;
+    width: 18%;
+    height: 6px;
+
+    @include tablet{ width: 40%;}
 }
 #navbar {
     position: fixed;
     z-index: 100;
     width: 100%;
     transition: 0.5s;
+    min-height: 60px;
 }
 #nav-mhweb-hamburger {
     width: 30px;
@@ -271,7 +300,7 @@ nav ul li a{
     a {
         color: white;
         &:hover {
-            background: color(dark-bg);
+            background: color(primary);
             color: white;
         }
     }
@@ -336,6 +365,14 @@ nav ul li a{
 #events {
     .image {
         overflow: hidden;
+        &:hover{
+            img{ 
+                filter: brightness(0.6); 
+                box-shadow: 0px 10px 25px -12px rgba(10,10,10, 0.3);
+                transform: scale(1.03);
+            }
+            .img-detail{ opacity: 1; top: 50%;}
+        }
         &:nth-child(5), &:nth-child(6), &:nth-child(7), &:nth-child(8) {
             @include mobile{ display: none; }
         }
@@ -343,7 +380,19 @@ nav ul li a{
             height: 200px;
             width: 100%;
             object-fit: cover;
-            transition: all 0.75s;
+            transition: all 0.8s;
+        }
+        .img-detail{
+            position: absolute;
+            top: 90%;
+            left: 50%;
+            transform: translate(-50%, -68%);
+            color: white;
+            opacity: 0;
+            transition: .75s;
+
+            .image-title{ margin-bottom: -5px; }
+            .tag{ font-size: 12px; margin-bottom: 0; }
         }
     }
 }
@@ -397,24 +446,24 @@ button span {
 }
 .owl-nav {
     i {
-        font-size: 12px;
-        height: 25px;
-        width: 25px;
+        font-size: 18px;
+        height: 40px;
+        width: 40px;
         background: white;
         color: color(primary);
         border-radius: 50%;
-        padding-top: 6.5px;
+        padding-top: 11px;
         box-shadow: 2px 3px 10px -3px rgba(0, 123, 255, 0.45);
         transition: 0.5s;
         &:hover{
-            transform: scale(1.2);
+            transform: scale(1.12);
             box-shadow: 3px 5px 10px -3px rgba(0, 123, 255, 0.65);
         }
     }
     .owl-prev{
         position: absolute;
         left: 0px;
-        top: 40%;
+        top: 36%;
         &:hover{
             background: transparent !important;
         }
@@ -422,7 +471,7 @@ button span {
     .owl-next{
         position: absolute;
         right: 0;
-        top: 40%;
+        top: 36%;
         &:hover{
             background: transparent !important;
         }
@@ -435,10 +484,23 @@ button span {
 #infographics {
     .item {
         overflow: hidden;
+        &:hover{
+            img{ filter: brightness(0.6); }
+            .image-title{ opacity: 1; top: 50%;}
+        }
         img {
             height: 300px;
             width: 100%;
             object-fit: cover;
+        }
+        .image-title{
+            position: absolute;
+            top: 90%;
+            left: 50%;
+            transform: translate(-50%, -68%);
+            color: white;
+            opacity: 0;
+            transition: .75s;
         }
     }
 }
@@ -538,7 +600,7 @@ input[type="radio"]:checked + .label{
             right: 0px;
             top: 16.375vw;
     
-            @include laptop{ left: 62.75%; }
+            @include laptop{ left: 61.37%; }
             &:hover{
                 background: transparent !important;
             }
@@ -551,6 +613,7 @@ input[type="radio"]:checked + .label{
 }
 .text-column{
     overflow-y: auto;
+    h4,h6, p, a{ font-family: 'Poppins',sans-serif; }
     @include laptop{ max-height: 40vw; }
     .photo-by, .video-by{
         p{ font-size: 15px !important;}
@@ -569,6 +632,7 @@ input[type="radio"]:checked + .label{
     left: 50%;
     transform: translateX(-50%);
     animation: shadow-pulse 1s infinite;
+    font-family: 'Poppins';
 }
 @keyframes shadow-pulse{
   0% {
