--- a/public/css/general.css
+++ b/public/css/general.css
@@ -21,10 +21,18 @@ h1, h3, h4, h5, h6 {
   font-weight: 600;
 }
 
-html, body {
+body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  padding-bottom: 200px;
+  position: relative;
   scroll-behavior: smooth;
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-bottom: 240px;
+  }
 }
 
 section {
@@ -266,9 +274,28 @@ section {
 #page-footer {
   margin-top: 50px;
   color: white;
+  height: 120px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 #page-footer a {
+  color: white;
+}
+
+@media (max-width: 767px) {
+  #page-footer {
+    height: 160px;
+  }
+}
+
+#home-footer {
+  margin-top: 50px;
+  color: white;
+}
+
+#home-footer a {
   color: white;
 }
 
