--- a/public/css/general.scss
+++ b/public/css/general.scss
@@ -12,10 +12,16 @@ main{
 h1, h3, h4, h5, h6 {
     font-weight: 600;
 }
-html, body {
+body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 200px;
+    position: relative;
     scroll-behavior: smooth;
+
+    @include tablet{
+        padding-bottom: 240px;
+    }
 }
 
 section {
@@ -253,6 +259,20 @@ button span {
     ==============
 */
 #page-footer {
+    margin-top: 50px;
+    color: white;
+    a { color: white; }
+    height: 120px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    @include tablet{
+        height: 160px;
+    }
+}
+
+#home-footer{
     margin-top: 50px;
     color: white;
     a { color: white; }
