--- a/public/css/search.scss
+++ b/public/css/search.scss
@@ -1,6 +1,13 @@
+@import 'variables';
+
 //radio input for photo and video
 #search-intro{
     margin-left: 1.5em;
+
+    @include mobile{
+        margin-left: 0;
+        text-align: center;
+    }
 }
 .radio {
     position: relative;
@@ -43,7 +50,7 @@ input[type="radio"]:checked + .type {
     column-gap: 1.5em;
     font-size: .85em;
 
-    @media (max-width: 575px){
+    @include mobile{
         -webkit-column-count: 1;
         -moz-column-count:1;
         column-count: 1;
@@ -64,11 +71,16 @@ input[type="radio"]:checked + .type {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    background: #a8c6e2d0;
     min-height: 200px;
     position: relative;
+    background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+    background-size: 400% 400%;
 
-    @media (max-width: 575px){
+    -webkit-animation: gradientBackground 2s ease-in-out infinite;
+    -moz-animation: gradientBackground 2s ease-in-out infinite;
+    animation: gradientBackground 2s ease-in-out infinite;
+
+    @include mobile{
         margin-bottom: 2rem;
         min-height: 150px;
     }
@@ -134,6 +146,22 @@ input[type="radio"]:checked + .type {
     }
 }
 
+@-webkit-keyframes gradientBackground {
+    0%{background-position:0% 59%}
+    50%{background-position:100% 42%}
+    100%{background-position:0% 59%}
+}
+@-moz-keyframes gradientBackground {
+    0%{background-position:0% 59%}
+    50%{background-position:100% 42%}
+    100%{background-position:0% 59%}
+}
+@keyframes gradientBackground { 
+    0%{background-position:0% 59%}
+    50%{background-position:100% 42%}
+    100%{background-position:0% 59%}
+}
+
 img:not([src]) {
     visibility: hidden;
 }
@@ -156,10 +184,10 @@ img:not([src]) {
         font-size: 14px;
         font-weight: 600;
 
-        @media (min-wdith: 768px){
+        @include ipad{
             font-size: 16px;
         }
-        @media (min-width: 992px){
+        @include big{
             font-size: 20px;
         }
     }
