--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -127,6 +127,30 @@
   }
 }
 
+@-webkit-keyframes gradientBackground {
+  0% {
+    background-position: 0% 59%;
+  }
+  50% {
+    background-position: 100% 42%;
+  }
+  100% {
+    background-position: 0% 59%;
+  }
+}
+
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 59%;
+  }
+  50% {
+    background-position: 100% 42%;
+  }
+  100% {
+    background-position: 0% 59%;
+  }
+}
+
 #events {
   -webkit-transform: translateY(-15px);
           transform: translateY(-15px);
@@ -134,6 +158,14 @@
 
 #events .image {
   overflow: hidden;
+}
+
+#events .image .img-container {
+  background: -webkit-gradient(linear, left top, right top, from(rgba(238, 118, 82, 0.596)), color-stop(rgba(231, 60, 126, 0.582)), color-stop(rgba(35, 165, 213, 0.541)), to(rgba(35, 213, 171, 0.493)));
+  background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+  background-size: 400% 400%;
+  -webkit-animation: gradientBackground 2s ease-in-out infinite;
+  animation: gradientBackground 2s ease-in-out infinite;
 }
 
 #events .image:hover img {
@@ -206,6 +238,11 @@
 
 #infographics .item {
   overflow: hidden;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(238, 118, 82, 0.596)), color-stop(rgba(231, 60, 126, 0.582)), color-stop(rgba(35, 165, 213, 0.541)), to(rgba(35, 213, 171, 0.493)));
+  background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+  background-size: 400% 400%;
+  -webkit-animation: gradientBackground 2s ease-in-out infinite;
+  animation: gradientBackground 2s ease-in-out infinite;
 }
 
 #infographics .item:hover img {
